# RAG-system-core

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 46164b3a819e_initial_migration.py
app/application/dtos/: chat_dto.py  conversation_dto.py  document_dto.py
app/application/interfaces/: conversation_repository.py
app/core/: config.py
app/domain/: exceptions.py
app/domain/entities/: conversation.py  document.py
app/infrastructure/database/: models.py  session.py
app/infrastructure/llm/: openai_adapter.py  openai_embedding.py
app/infrastructure/repositories/: conversation_repository.py  document_repository.py
